2008-02-19  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/Makefile.am:
	* flumotion/component/misc/httpfile/ratecontrol.py:
	  Add rate control code; not committing the bits to hook it into
	  http-server yet. First working version; still needs lots of cleanup.

2008-02-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/worker/checks/cortado.py (checkCortado): Oops, forgot 
	  pychecker again. msg instead of filename

	* flumotion/admin/gtk/greeter.py (Initial.setup):
	  Fix a long-standing annoying bug: always keep a radio button focus on the
	  first greeter page and make pressing enter go to the next step.
	  Also refactor the initial step a bit, so it's actually understandable.

	* flumotion/worker/checks/cortado.py (checkCortado): Add debugging to the 
	  cortado check

	* flumotion/admin/gtk/componentview.py
	(ComponentView._get_widget_constructor): Add component view wire 
	  compatibility with platform-3.

2008-02-18  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/misc/cortado/cortado_location.py.in 
	(getCortadoFilename): 
	  Check for cortado.jar in /usr/share/cortado, where debian/ubuntu installs
	  it.

	* flumotion/manager/config.py (exportPlanetXml.component): 
	  Break up into pieces which allows a simple if statement instead of crazy 
	  and/or conditionals. Fixes a pychecker bug and makes the code easier to 
	  understand.

2008-02-18  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/config.py:
	  When exporting a planet config, ensure that we don't add clock-master
	  for atmosphere components, since those aren't valid in the XML.

2008-02-18  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/misc/cortado/cortado_location.py.in 
	(getCortadoFilename): 
	  Check the location ubuntu/debian installs cortado.

	* flumotion/wizard/configurationwriter.py:
	(XMLWriter._collectAttributes): 
	  Quote the attribute values properly

	* flumotion/test/Makefile.am:
	* flumotion/test/test_wizard_save.py: